@@ -10,6 +10,7 @@
   * Minor table GUI fix when expanding a sticky
   * Templates page is now sortable by name
   * Searching and filtering is now possible in the groups list view
+  * Tags can now be cleared when updating a sticky
 
 * Refactoring
   * Removed unused sticky attributes sticky type, sticky position, and sticky parent
